--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -8,3 +8,13 @@ body {
     overflow-y: hidden;
     @apply bg-white;
 }
+
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #c4c4c4;
+    border-radius: 10px;
+}
